Reading history from special topic
Signed-off-by: fabiojose <fabiojose@gmail.com>